--- a/base-style.css
+++ b/base-style.css
@@ -48,16 +48,20 @@ img[src="ddg-logo.png"]{
     background-color:#00c2ff;
     padding:0em 1em;
     border-radius:0.5em 0.5em 0 0;
+    transition:padding 0.1s ease-in-out, margin 0.1s ease-in-out;
 }
 .panel nav span.inactive{
     background-color:#006280;
     background-image:linear-gradient(#006280 33%,#222 100%);
 }
 .panel nav span.inactive:hover{
-    background-image:linear-gradient(#0092be 0%, #0092be 50%,#333 100%);
+    background-image:linear-gradient(#0092be 50%,#333 100%);
     text-decoration:underline;
-    padding-bottom:0.25em;
-    margin-top:-0.25em;
+    padding-bottom:0.125em;
+    margin-top:-0.125em;
+}
+.panel nav span.inactive:active{
+    background-image:linear-gradient(#00c2ff 50%,#333 100%);
 }
 .panel main{
     background-color:#00c2ff;
