--- a/base-style.css
+++ b/base-style.css
@@ -4,6 +4,7 @@ body{
     font-family:'Exo',sans-serif;
     font-size:1.5em;
     color:white;
+    background-color:#00c2ff;
 }
 header{
     display:flex;
@@ -27,7 +28,7 @@ img[src="ddg-logo.png"]{
 }
 .panel{
     display:inline-block;
-    height: auto;
+    height:auto;
 }
 .left.panel{
     width:66.67%
@@ -45,10 +46,10 @@ img[src="ddg-logo.png"]{
 }
 .panel nav span{
     display:inline-block;
-    background-color: #006280;
+    background-color:#006280;
     padding:0em 1em;
     border-radius:0.35em 0.35em 0 0;
-    transition:padding 0.1s, margin 0.1s;
+    transition:padding 0.1s, margin 0.1s, background-color 0.1s;
 }
 .panel.view1 nav span.viewButton1, .panel.view2 nav span.viewButton2, .panel.view3 nav .viewButton3, .panel.view4 nav span.viewButton4 {
     background-color:#00c2ff;
@@ -70,7 +71,7 @@ img[src="ddg-logo.png"]{
     margin-top:-0.125em;
 }
 .panel nav span:active{
-    background-color: #00c2ff;
+    background-color:#00c2ff;
     background-image:linear-gradient(#0000 50%,#0009 100%);
     padding-bottom:0.25em;
     margin-top:-0.25em;
@@ -88,7 +89,8 @@ img[src="ddg-logo.png"]{
 .left.panel.view1 main#view1, .left.panel.view2 main#view2, .left.panel.view3 main#view3, .left.panel.view4 main#view4{
     display:block;
 }
-.panel main .session{
+/* session panel */
+.left.panel #view1 .session{
     font-family:'Teko',serif;
     font-weight:600;
     font-size:1.1em;
@@ -97,65 +99,93 @@ img[src="ddg-logo.png"]{
     padding:1.2rem 0;
     margin:1em 0;
 }
-.panel main .session div{
+.left.panel #view1 .session div{
     display:flex;
     width:auto;
     justify-content:space-between;
 }
-.panel main .session div .left{
-    position: relative;
-    left: 0.2em;
+.left.panel #view1 .session div .left{
+    position:relative;
+    left:0.2em;
 }
 
-.panel main .session div span.right{
-    position: relative;
-    right: 0.2em;
+.left.panel #view1 .session div span.right{
+    position:relative;
+    right:0.2em;
 }
-.panel main .session div span span{
+.left.panel #view1 .session div span span{
     padding:0.25em 0.5em;
     margin:0;
     border:0.125em solid black;
     position:relative;
 }
-.panel main .session .firstRow span span{
+.left.panel #view1 .session .firstRow span span{
     top:-0.45rem;
     background-image:linear-gradient(#333,#222);
 }
-.panel main .session .secondRow span span{
+.left.panel #view1 .session .secondRow span span{
     top:0.45rem;
     background-image:linear-gradient(#222,#111);
 }
-.panel main .session div span span input[type=text]{
+.left.panel #view1 .session div span span input[type=text]{
     font-size:1em;
     color:white;
     font-family:'Teko',serif;
-    font-weight:300;
     border: 0;
-    border-bottom: 0.0625em solid white;
-    margin-bottom: -0.0625em;
+    border-bottom:0.0625em solid white;
+    margin-bottom:-0.0625em;
+    border-radius:0.125em;
+    padding:0 0.125em;
 }
-.panel main .session .firstRow span span input[type=text]{
-    width:2.25em;
+.left.panel #view1 .session .firstRow span span input[type=text]{
+    text-align:center;
+    font-weight:600;
+    width:2em;
     background-color:#333;
+    background-image:linear-gradient(#313131 0%, #111 100%);
 }
-.panel main .session .secondRow span span input[type=text]{
+.left.panel #view1 .session .secondRow span span input[type=text]{
+    font-weight:400;
     background-color:#222;
+    background-image:linear-gradient(#202020 0%, #000 100%);
 }
-.panel main .session .secondRow .left span input[type=text]{
+.left.panel #view1 .session .secondRow .left span input[type=text]{
     width:16em;
 }
-.panel main .session .secondRow .right span input[type=text]{
+.left.panel #view1 .session .secondRow .right span input[type=text]{
     width:8em;
 }
-.panel main .session span span.topRight{
+.left.panel #view1 .session span span.topRight{
     border-radius:0 1em 0 0;
 }
-.panel main .session span span.bottomRight{
+.left.panel #view1 .session span span.bottomRight{
     border-radius:0 0 1em 0;
+    padding-right:0.5em;
 }
-.panel main .session span span.topLeft{
+.left.panel #view1 .session span span.topLeft{
     border-radius:1em 0 0 0;
 }
-.panel main .session span span.bottomLeft{
+.left.panel #view1 .session span span.bottomLeft{
     border-radius:0 0 0 1em;
 }
+/* user panel */
+.left.panel #view2 .users table{
+    border-collapse:collapse;
+    text-align:left;
+}
+.left.panel #view2 .users td, .left.panel #view2 .users th{
+    padding: 0.25em 0.5em;
+}
+.left.panel #view2 .users td + td, .left.panel #view2 .users th + th{
+    border-left:0.0625em solid white;
+}
+.left.panel #view2 .users td{
+    font-size:0.6em;
+    font-weight:400;
+}
+.left.panel #view2 .users th{
+    font-size:0.75em;
+    font-weight:600;
+}
+
+
